Add mtail for exporting log events to Prometheus
This adds support for Google mtail to allow generating metrics from logs,
from which alerts may then be generated. Out of the box, metrics are
generated for user logins from syslog events. Support to add further
functionality, via the use of custom mtail programs, is supported via
Kolla configuration.

(cherry picked from commit 6986e1388bab12a673f2d2a17eb4f67eb45dfe96)

--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -478,6 +478,7 @@
     - prometheus-alertmanager
     - prometheus-openstack-exporter
     - prometheus-elasticsearch-exporter
+    - prometheus-mtail
     - '&enable_prometheus_True'
   serial: '{{ kolla_serial|default("0") }}'
   roles:
