--- a/ansible/roles/prometheus/defaults/main.yml
+++ b/ansible/roles/prometheus/defaults/main.yml
@@ -134,11 +134,31 @@ prometheus_services:
       - "{{ '/etc/timezone:/etc/timezone:ro' if kolla_base_distro in ['debian', 'ubuntu'] else '' }}"
       - "kolla_logs:/var/log/kolla/"
     dimensions: "{{ prometheus_elasticsearch_exporter_dimensions }}"
+  prometheus-mtail:
+    container_name: "prometheus_mtail"
+    group: "prometheus-mtail"
+    enabled: "{{ enable_prometheus_mtail | bool }}"
+    image: "{{ prometheus_mtail_image_full }}"
+    volumes:
+      - "{{ node_config_directory }}/prometheus-mtail/:{{ container_config_directory }}/:ro"
+      - "/etc/localtime:/etc/localtime:ro"
+      - "kolla_logs:/var/log/kolla/"
+      - "/var/log/secure:/var/log/secure:ro"
+      - "/var/log/messages:/var/log/messages:ro"
+    dimensions: "{{ prometheus_mtail_dimensions }}"
 
 ####################
 # Database
 ####################
 prometheus_mysql_exporter_database_user: "{% if use_preconfigured_databases | bool and use_common_mariadb_user | bool %}{{ database_user }}{% else %}prometheus{% endif %}"
+
+####################
+# mtail
+####################
+prometheus_mtail_log_directories:
+  - /var/log/secure
+  - /var/log/messages
+  - /var/log/kolla/keystone/*.log #Need some way of only configuring on host running keyston
 
 ####################
 # Docker
@@ -183,6 +203,10 @@ prometheus_elasticsearch_exporter_image: "{{ docker_registry ~ '/' if docker_reg
 prometheus_elasticsearch_exporter_tag: "{{ prometheus_tag }}"
 prometheus_elasticsearch_exporter_image_full: "{{ prometheus_elasticsearch_exporter_image }}:{{ prometheus_elasticsearch_exporter_tag }}"
 
+prometheus_mtail_image: "{{ docker_registry ~ '/' if docker_registry else '' }}{{ docker_namespace }}/{{ kolla_base_distro }}-{{ prometheus_install_type }}-prometheus-mtail"
+prometheus_mtail_tag: "{{ prometheus_tag }}"
+prometheus_mtail_image_full: "{{ prometheus_mtail_image }}:{{ prometheus_mtail_tag }}"
+
 prometheus_server_dimensions: "{{ default_container_dimensions }}"
 prometheus_haproxy_exporter_dimensions: "{{ default_container_dimensions }}"
 prometheus_mysqld_exporter_dimensions: "{{ default_container_dimensions }}"
@@ -192,3 +216,4 @@ prometheus_cadvisor_dimensions: "{{ default_container_dimensions }}"
 prometheus_alertmanager_dimensions: "{{ default_container_dimensions }}"
 prometheus_openstack_exporter_dimensions: "{{ default_container_dimensions }}"
 prometheus_elasticsearch_exporter_dimensions: "{{ default_container_dimensions }}"
+prometheus_mtail_dimensions: "{{ default_container_dimensions }}"
