--- a/etc/kolla/passwords.yml
+++ b/etc/kolla/passwords.yml
@@ -272,3 +272,8 @@ prometheus_alertmanager_password:
 # Onos
 ############
 onos_password:
+
+############
+# cASO
+############
+caso_keystone_password:
