Add enable_ceph_rgw_external to configure haproxy
(cherry picked from commit c79347b0ebec961b660fab686a20188660e99365)

--- a/ansible/roles/ceph/defaults/main.yml
+++ b/ansible/roles/ceph/defaults/main.yml
@@ -7,12 +7,12 @@ ceph_services:
     enabled: "{{ enable_ceph_rgw|bool }}"
     haproxy:
       radosgw:
-        enabled: "{{ enable_ceph|bool and enable_ceph_rgw|bool }}"
+        enabled: "{{ (enable_ceph|bool and enable_ceph_rgw|bool) or enable_ceph_rgw_external|bool }}"
         mode: "http"
         external: false
         port: "{{ rgw_port }}"
       radosgw_external:
-        enabled: "{{ enable_ceph|bool and enable_ceph_rgw|bool }}"
+        enabled: "{{ (enable_ceph|bool and enable_ceph_rgw|bool) or enable_ceph_rgw_external|bool }}"
         mode: "http"
         external: true
         port: "{{ rgw_port }}"
