--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -368,6 +368,7 @@ prometheus_ceph_mgr_exporter_port: "9283"
 prometheus_cadvisor_port: "18080"
 prometheus_mtail_port: "9197"
 prometheus_libvirt_exporter_port: "9177"
+prometheus_jiralert_port: "9097"
 
 # Prometheus alertmanager ports
 prometheus_alertmanager_port: "9093"
@@ -661,6 +662,7 @@ num_nova_fake_per_node: 5
 # Monitoring options are specified here
 enable_collectd: "no"
 enable_prometheus: "no"
+enable_prometheus_jiralert: "no"
 
 # Clean images options are specified here
 enable_destroy_images: "no"
@@ -1043,6 +1045,12 @@ enable_prometheus_openstack_exporter: "{{ enable_prometheus | bool }}"
 enable_prometheus_elasticsearch_exporter: "{{ enable_prometheus | bool and enable_elasticsearch | bool }}"
 enable_prometheus_mtail: "{{ enable_prometheus | bool }}"
 enable_prometheus_libvirt_exporter: "{{ enable_prometheus | bool and enable_nova | bool }}"
+
+# Prometheus Jiralert settings
+enable_prometheus_jiralert: "no"
+prometheus_jiralert_api_url:
+prometheus_jiralert_user:
+prometheus_jiralert_project:
 
 prometheus_alertmanager_user: "admin"
 prometheus_openstack_exporter_interval: "60s"
