--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -140,6 +140,7 @@
     - prometheus-mtail
     - prometheus-elasticsearch-exporter
     - prometheus-libvirt-exporter
+    - prometheus-dellhw-exporter
   serial: '{{ kolla_serial|default("0") }}'
   roles:
     - { role: prometheus,
