--- a/ansible/roles/prometheus/tasks/precheck.yml
+++ b/ansible/roles/prometheus/tasks/precheck.yml
@@ -14,6 +14,7 @@
       - prometheus_elasticsearch_exporter
       - prometheus_libvirt_exporter
       - prometheus_jiralert
+      - prometheus_dellhw_exporter
   register: container_facts
 
 - name: Checking free port for Prometheus server
@@ -171,3 +172,17 @@
     - enable_prometheus_jiralert | bool
   with_items:
     - "{{ prometheus_jiralert_port }}"
+
+- name: Checking free ports for Prometheus dellhw-exporter
+  wait_for:
+    host: "{{ hostvars[inventory_hostname]['ansible_' + api_interface]['ipv4']['address'] }}"
+    port: "{{ item }}"
+    connect_timeout: 1
+    timeout: 1
+    state: stopped
+  when:
+    - container_facts['prometheus_dellhw_exporter'] is not defined
+    - inventory_hostname in groups['prometheus-dellhw-exporter']
+    - enable_prometheus_dellhw_exporter | bool
+  with_items:
+    - "{{ prometheus_dellhw_exporter_port }}"
