[WIP] Modify kolla-ansible to deploy an Octavia using dual CAs for servers (amphorae) and clients (controllers)
(cherry picked from commit 7a083c6e9b90fdd8eb392abc9bcbca6e0eabe34f)

--- a/ansible/roles/octavia/tasks/precheck.yml
+++ b/ansible/roles/octavia/tasks/precheck.yml
@@ -36,6 +36,7 @@
   failed_when: not result.stat.exists
   when: inventory_hostname in groups['octavia-worker']
   with_items:
-    - cakey.pem
-    - ca_01.pem
-    - client.pem
+    - client.cert-and-key.pem
+    - server_ca.cert.pem
+    - client_ca.cert.pem
+    - server_ca.key.pem
