--- a/etc/kolla/passwords.yml
+++ b/etc/kolla/passwords.yml
@@ -183,6 +183,7 @@ octavia_database_password:
 octavia_keystone_password:
 octavia_server_ca_password:
 octavia_client_ca_password:
+octavia_client_key_password:
 
 searchlight_keystone_password:
 
